--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="6866d0db6f01825bc2d4bcd58872b0214d62bcc4" content="6866d0db6f01825bc2d4bcd58872b0214d62bcc4" />
     <title>Ads</title>
 </head>
 <body>
