--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="6866d0db6f01825bc2d4bcd58872b0214d62bcc4" content="6866d0db6f01825bc2d4bcd58872b0214d62bcc4" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
     <title>Ads</title>
 </head>
 <body>
